# data-science-setup

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  data.dvc  dvc.yaml  pyproject.toml
config/: main.yaml
data/: raw.dvc
models/: price_liner_reg.joblib
src/data/: data_explorer.py
src/features/: data_preprocessing.py
src/models/: data_manipulation.py  predict_service.py  train.py
src/visualization/: plotter.py
